Finalizando documentação e atualizando código
